# tars_analysis

./: .gitignore  CMakeLists.txt
examples/a_rpc_demo/: CMakeLists.txt  config.conf  tars_rpc.h  tars_rpc.tars  tars_rpc_client.cpp  tars_rpc_impl.h  tars_rpc_server.h
examples/a_rpc_demo/config/conf/: TestApp.HelloServer.config.conf
examples/hello_demo/: CMakeLists.txt  config.conf  tars_base.h  tars_base.tars  tars_rpc.h  tars_rpc.tars  tars_rpc_client.cpp  tars_rpc_impl.cpp  tars_rpc_server.cpp
util/src/: tc_transceiver.cpp
xy_mini/: CMakeLists.txt
xy_mini/demo/demo_network/: CMakeLists.txt  demo_epoll_server.cpp  demo_epoll_server.h  demo_network.cpp  demo_network.h
xy_mini/network/: CMakeLists.txt  tc_network_buffer.cpp  tc_network_buffer.h  xy_bind_adapter.cpp  xy_bind_adapter.h  xy_clientsocket.cpp  xy_clientsocket.h  xy_connection.cpp  xy_connection.h  xy_epoll_server.cpp  xy_epoll_server.h  xy_epoller.cpp  xy_epoller.h  xy_handle.cpp  xy_handle.h  xy_http.cpp  xy_http.h  xy_net_comm.h  xy_netthread.cpp  xy_netthread.h  xy_network_buffer.cpp  xy_network_buffer.h  xy_scoket.cpp  xy_scoket.h
xy_mini/util/: CMakeLists.txt  logging.h  xy_autoptr.cpp  xy_autoptr.h  xy_cas_queue.h  xy_common.cpp  xy_common.h  xy_ec.cpp  xy_ec.h  xy_file.cpp  xy_file.h  xy_lock.h  xy_logger.cpp  xy_logger.h  xy_monitor.cpp  xy_monitor.h  xy_noncopyable.h  xy_platform.h  xy_port.cpp  xy_port.h  xy_spin_lock.cpp  xy_spin_lock.h  xy_thread.cpp  xy_thread.h  xy_thread_cond.cpp  xy_thread_cond.h  xy_thread_mutex.cpp  xy_thread_mutex.h  xy_thread_queue.h  xy_timeprovider.cpp  (+1 more)
(+4 files in other folders)
